--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.0",
         "livewire/livewire": "^2.4",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-backup": "^6.16",
         "spatie/laravel-permission": "^4.0"
     },
