--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/ui": "^3.0",
         "livewire/livewire": "^2.4",
         "maatwebsite/excel": "^3.1",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-backup": "^6.16",
         "spatie/laravel-permission": "^4.0"
     },
