--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 /node_modules
+/public/hot
+/public/data
+/public/fonts
+/public/storage
+/public/js
+/public/css
+/public/vendors
 /storage/*.key
 /storage
 /vendor
