--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
-        "barryvdh/laravel-dompdf": "^0.9.0",
+        "php": "^8.0",
+        "barryvdh/laravel-dompdf": "^1.0",
         "dompdf/dompdf": "^1.0",
         "encore/laravel-admin": "^1.8",
         "fideloper/proxy": "^4.4",
@@ -17,23 +17,23 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "jxlwqq/data-table": "^1.0",
         "jxlwqq/material-ui": "^1.0",
-        "laravel/framework": "^8.12",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.0",
         "livewire/livewire": "^2.4",
         "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "spatie/laravel-backup": "^6.16",
-        "spatie/laravel-permission": "^4.0"
+        "spatie/laravel-backup": "^8.0",
+        "spatie/laravel-permission": "^5.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.3.3"
     },
     "config": {
